web-app/public/css/app.css
.error-template {
  padding: 40px 15px;
  text-align: center;
}
.error-actions {
  margin-top: 15px;
  margin-bottom: 15px;
}
.error-actions .btn {
  margin-right: 10px;
}
body {
  background: #fff;
}
.custom-hover:hover {
  background-color: #e7e7e7 !important;
  cursor: pointer;
}
.token {
  display: inline-block;
  margin: 4px 4px 4px 4px;
  cursor: default;
}
.token .glyphicon {
  cursor: pointer;
}
.typeahead {
  display: inline-block;
  position: relative;
}
.typeahead .suggestions {
  width: 100%;
}
.typeahead .form-group {
  margin-bottom: 0 !important;
}
.rangeInput {
  display: inline-block !important;
}
.rangeInput > div {
  display: inline-block !important;
}
.dl-horizontal dt {
  text-align: left;
  width: auto;
  padding-right: 1em;
}
.dl-horizontal dd {
  margin-left: 0;
}
.well-sm {
  margin-bottom: 0 !important;
}

